Finalização do primeiro projeto front-end, criação de uma interface de login/cadastro

--- a/PP - 01/index.html
+++ b/PP - 01/index.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/style.css">
-    <script>
-    </script>
+    <script src="function.js"></script>
     <title>Teste</title>
 </head>
 
@@ -21,7 +20,7 @@
                         <p>Insira suas informações pessoais para se cadastrar e usufruir de todas as nossas
                             funcionalidades.
                             Se você já possui uma conta faça login clicando no botão abaixo</p>
-                        <button onclick="alternate_to_registration()">Login</button>
+                        <button onclick="SetRegistrationDisplayNone()">Login</button>
                     </div>
                 </div>
             </div>
@@ -57,7 +56,7 @@
                     <h1>Bem vindo de volta! </h1>
                     <p>Insira seu email e senha para acessar livremente todas as funcionalidades. Se ainda não
                         possui uma conta clique no botão abaixo e cadastre-se</p>
-                    <button id="login_button">Cadastrar</button>
+                    <button onclick="SetLoginDisplayNone()">Cadastrar</button>
 
                 </div>
             </div>
